<resources>
    <string name="app_name" translatable="false">CRYPVAULT</string>
    <string name="warning"><b>WARNING:</b> If you forget the\nfile Sequence or loose the files then \nthe vault would not open.</string>
    <string name="empty_vault">No data in your vault</string>
    <string name="vault_name_hint">CrypName</string>
    <string name="no_file_selected">Add 3 files</string>
    <string name="vault_unlock_images_selection_massage">Select Images in same sequence as select at the time of encryption</string>
    <string name="button_secure_vault">Secure Vault</string>
    <string name="button_open_vault">Open Vault</string>
    <string name="empty_list">empty list</string>
    <string name="fab_hint">expand add vault menu</string>
</resources>