<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/backgroundColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VaultOpenActivity">

    <ImageButton
        android:id="@+id/back_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        android:outlineProvider="bounds"
        android:src="@drawable/ic_back_arrow"
        android:tint="?attr/colorOnSecondary"
        app:layout_constraintEnd_toStartOf="@+id/title_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/Vault_name"/>

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="20dp"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="?android:attr/textColor"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Vault_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/vault_name_hint"
        android:textColor="?android:attr/textColor"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/vault_combination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bottom_sheet_sections_background"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Vault_name">

        <LinearLayout
            android:id="@+id/first_two_files"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="15dp"
                android:background="@drawable/add_data_indicator"
                android:gravity="center"
                android:hapticFeedbackEnabled="true"
                android:text="1"
                android:textAlignment="center"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="15dp"
                android:background="@drawable/add_data_indicator"
                android:gravity="center"
                android:hapticFeedbackEnabled="true"
                android:text="2"
                android:textAlignment="center"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="36sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/last_file"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/add_data_indicator"
            android:gravity="center"
            android:hapticFeedbackEnabled="true"
            android:text="3"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/file_add_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_two_files" />

        <TextView
            android:id="@+id/file_add_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/vault_unlock_images_selection_massage"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/last_file" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/open_vault_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_open_vault"
        android:paddingVertical="10dp"
        android:background="@drawable/button_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vault_combination" />

</androidx.constraintlayout.widget.ConstraintLayout>