<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/bottom_sheet"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingTop="5dp"
    android:paddingHorizontal="10dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    app:behavior_peekHeight = "80dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp"
        android:textAlignment="center">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/expand_bottom_sheet_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/fab_hint"
            android:src="@drawable/ic_baseline_add_24"
            app:fabSize="normal" />

        <EditText
            android:id="@+id/vault_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/edit_text_background"
            android:hint="@string/vault_name_hint"
            android:inputType="text"
            android:layout_marginTop="20dp"
            android:minWidth="240dp"
            android:padding="10dp"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bottom_sheet_sections_background"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/first_two_files"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="15dp"
                android:background="@drawable/add_data_indicator"
                android:gravity="center"
                android:text="1"
                android:hapticFeedbackEnabled="true"
                android:textAlignment="center"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="15dp"
                android:background="@drawable/add_data_indicator"
                android:gravity="center"
                android:hapticFeedbackEnabled="true"
                android:text="2"
                android:textAlignment="center"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="36sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/last_file"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hapticFeedbackEnabled="true"
            android:layout_marginBottom="5dp"
            android:background="@drawable/add_data_indicator"
            android:gravity="center"
            android:text="3"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/file_add_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_two_files" />

        <TextView
            android:id="@+id/file_add_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/no_file_selected"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/last_file" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:background="@drawable/bottom_sheet_sections_background"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/materialButton"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:gravity="center"
            android:text="+\nAdd file/data to vault"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_marginBottom="20dp"
        android:text="@string/button_secure_vault"
        style="@style/CustomButton"/>
</LinearLayout>